Se agregan cositas

--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYF </title>
-    <h1> Nitsuga </h1>
+    <link rel="stylesheet" href="Estilos.css"/>
+    
+    <h1> Nitsuga :3 </h1>
     <h5> Cute and Kawaii </h5>
 </head>
 <body>
