--- a/Index.html
+++ b/Index.html
@@ -9,13 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> NYF </title>
     <link rel="stylesheet" href="Estilos.css"/>
-    
+
     <h1> Nitsuga :3 </h1>
     <h5> Cute and Kawaii </h5>
 </head>
 <body>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sequi, quasi sit, atque quia delectus consequuntur porro, quibusdam illum nobis ipsam autem quae? Possimus quisquam esse, repudiandae quia ut ipsam.
+   
 
-    </P>
+    <nav>
+        <a href="#home">Inicio</a>
+        <a href="#destacados">Destacados</a>
+        <a href="#Categorias">Categorias</a>
+    </nav>
+
 </body>
 </html>
