--- a/Index.html
+++ b/Index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title> NYF </title>
     <link rel="stylesheet" href="Estilos.css"/>
-
-    <h1> Nitsuga :3 </h1>
-    <h5> Cute and Kawaii </h5>
 </head>
 <body>
-   
-
-    <nav>
-        <a href="#home">Inicio</a>
-        <a href="#destacados">Destacados</a>
-        <a href="#Categorias">Categorias</a>
-    </nav>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="main">
+        <nav>
+            <ul>
+                <li><a href="./Index.html">Inicio</a></li>
+                <li><a href="#">Categorías</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+                <li><a href="./contacto.html">Registrarme</a></li>
+            </ul>
+        </nav>
+        <div class="titulo">
+            <div class="titulo_principal">
+                <h1> Nitsuga ニツガ </h1>
+            </div>
+            <div class="subtitulo">
+                <h5> Cute and Kawaii </h5>
+            </div>
+        
+        </div>    
+        <div class="slider">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="Imagenes/imagen1.jpeg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="Imagenes/imagen2.jpeg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="Imagenes/imagen3.jpeg" alt="Third slide">
+                  </div>
+                </div>
+            </div>    
+        </div>
 </body>
 </html>
