--- a/login_antigua.html
+++ b/login_antigua.html
@@ -18,7 +18,7 @@
           </div>
     
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="./Index.html" class="text-light nav-link px-2 link-secondary">Inicio</a></li>
+            <li><a href="./index.html" class="text-light nav-link px-2 link-secondary">Inicio</a></li>
             <li><a href="./contacto.html" class="text-light nav-link px-2">Contacto</a></li>
             <li><a href="./categorias.html" class="text-light nav-link px-2">Categorias</a></li>
             <li><a href="#" class="text-light nav-link px-2">Nosotros</a></li>
