Implementación de API GoogleMaps y carrusel en vistas de productos.

--- a/art_escolares.html
+++ b/art_escolares.html
@@ -167,7 +167,24 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Cortacartón Patita</h2>
                                 <p class="item-intro text-muted">Cortacartón con diseño de pata de gato.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/cortacarton_patita1.JPEG" alt="..." />
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/cortacarton_patita1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/cortacarton_patita2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Ideal para cortar papel, cartón y otros. Material resistente, fácil de limpiar y guardar. Práctico y apto para todo tipo de bolsillos.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -198,7 +215,24 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Cortacartón zanahoria</h2>
                                 <p class="item-intro text-muted">Cortacartón con diseño de zanahoria.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/cortacarton_zanahoria1.JPEG" alt="..." />
+                                <div id="carouselExample1" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/cortacarton_zanahoria1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/cortacarton_zanahoria2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Ideal para cortar papel, cartón y otros. Material resistente, fácil de limpiar y guardar. Práctico y apto para todo tipo de bolsillos.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -229,7 +263,27 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Goma de borrar colores</h2>
                                 <p class="item-intro text-muted">Gomas de borrar, colores pastel.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/gomaborrarlarga1.JPEG" alt="..." />
+                                <div id="carouselExample2" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/gomaborrarlarga1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/gomaborrarlarga2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/gomaborrarlarga3.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Goma de borrar resistente de hermosos colores pastel. Infaltable en cualquier pack estudiantil.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -264,7 +318,24 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Lapiz diseño Sanrio</h2>
                                 <p class="item-intro text-muted">Lapiz tinta negra, personajes Sanrio.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/lapiz_sanrio1.JPEG" alt="..." />
+                                <div id="carouselExample3" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/lapiz_sanrio1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/lapiz_sanrio2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample3" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Lápiz de tinta negra 0.5 con hermosos diseños de los diferentes personajes de la familia Sanrio. Ideal para fanáticos de HelloKitty y sus amigos.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -299,7 +370,24 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Lapiz diseño Cute</h2>
                                 <p class="item-intro text-muted">Lapiz tinta negra</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/lapiz_tintanegra1.JPEG" alt="..." />
+                                <div id="carouselExample4" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/lapiz_tintanegra1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/lapiz_tintanegra2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample4" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample4" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Lápiz de tinta negra 0.5 con diferentes colores y diseños. Ideal para fanáticos de todo lo cute&kawai.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -334,7 +422,27 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Plumón doblepunta Sanrio</h2>
                                 <p class="item-intro text-muted">Plumones doblepunta, diseño Sanrio.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_escolares/plumon_doblepunta1.JPEG" alt="..." />
+                                <div id="carouselExample5" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_escolares/plumon_doblepunta1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/plumon_doblepunta2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_escolares/plumon_doblepunta3.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample5" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample5" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Plumones doblepunta diferentes colores y diseños. Una punta es plumón y la otra 0.5. Ideal para fanáticos de HelloKitty y sus amigos.</p>
                                 <ul class="list-inline">
                                     <li>
