--- a/art_varios.html
+++ b/art_varios.html
@@ -165,18 +165,18 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Charmander</h2>
-                                <p class="item-intro text-muted">Mini lámpara diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_charmander.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño de uno de los personajes más reconocidos de Pokemón, Charmander. Con 12cm de alto es capaz de iluminar toda tu habitación con su tenue luz color naranja. Usa pilas.</p>
+                                <h2 class="text-uppercase">Calcetas invisibles</h2>
+                                <p class="item-intro text-muted">Calcetas cortas diseño cute.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_varios/calcetas.png" alt="..." />
+                                <p>Pequeñas calcetas diseño cute formato "invisible". Al ser cortas no son visibles por encima de los zapatos.</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Colores:</strong>
-                                        Naranja
+                                        <strong>Diseños:</strong>
+                                        Surtidos
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
-                                        $9.990 C/U
+                                        $4.990 PACK DE 3 PARES
                                     </li>
                                 </ul>
                                 <button class="btn btn-outline-light btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -200,18 +200,18 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Psyduck</h2>
-                                <p class="item-intro text-muted">Mini lámpara con diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_psyduck.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño de uno de los personajes más reconocidos de Pokemón, Psyduck. Con 12cm de alto es capaz de iluminar toda tu habitación con su tenue luz color amarilla. Usa pilas.</p>
+                                <h2 class="text-uppercase">Calentador de manos</h2>
+                                <p class="item-intro text-muted">Calentadores de manos diseño Sanrio.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_varios/calentador_manos.png" alt="..." />
+                                <p>Pequeños y peluditos calentadores de manos con diseño de los personajes de Sanrio. Especial para fanáticos de HelloKitty y sus amigos.</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Colores:</strong>
-                                        Amarillo
+                                        <strong>Diseños:</strong>
+                                        Hello Kitty, My Melody, Cinnamoroll, Kuromi
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
-                                        $9.990 C/U
+                                        $7.990 C/U
                                     </li>
                                 </ul>
                                 <button class="btn btn-outline-light btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -235,18 +235,18 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Squartle</h2>
-                                <p class="item-intro text-muted">Mini lámpara con diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_squartle.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño de uno de los personajes más reconocidos de Pokemón, Squartle. Con 12cm de alto es capaz de iluminar toda tu habitación con su tenue luz color azul. Usa pilas.</p>
+                                <h2 class="text-uppercase">Guantes de gato</h2>
+                                <p class="item-intro text-muted">Guantes con diseño patita de gato.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_varios/guante_gato.png" alt="..." />
+                                <p>Peluditos guantes con diseño de patita de gato. Especiales para el frío. Descubiertos en la punta de los dedos para el uso del celular.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Colores:</strong>
-                                        Azul
+                                        Negro
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
-                                        $9.990 C/U
+                                        $3.990 EL PAR
                                     </li>
                                 </ul>
                                 <button class="btn btn-outline-light btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -270,14 +270,31 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Pikachu</h2>
-                                <p class="item-intro text-muted">Mini lámpara con diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_pikachubocaabajo2.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño del personaje más reconocido de Pokemón, Pikachu. Con 10cm de largo es capaz de iluminar toda tu habitación con su tenue luz color amarilla. Éste diseño muestra a Pikachu acostado boca abajo. Usa pilas.</p>
+                                <h2 class="text-uppercase">Humidificador de gato</h2>
+                                <p class="item-intro text-muted">Humidificador de ambiente diseño gato.</p>
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/art_varios/humidificador.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/art_varios/humidificador2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                                <p>Mini humidificador de ambiente con hermoso diseño de gatito. Diseñados para ambientes secos y calurosos.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Colores:</strong>
-                                        Amarillo
+                                        Rosa, Blanco
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
@@ -305,10 +322,10 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Pikachu</h2>
-                                <p class="item-intro text-muted">Mini lámpara con diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_pikachuestrella.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño del personaje más reconocido de Pokemón, Pikachu. Con 10cm de largo es capaz de iluminar toda tu habitación con su tenue luz color amarilla. Éste diseño muestra a Pikachu acostado boca arriba con sus patitas extendidas. Usa pilas.</p>
+                                <h2 class="text-uppercase">Orejas de gato</h2>
+                                <p class="item-intro text-muted">Cintillo diseño orejas de gato.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_varios/orejas_gato.png" alt="..." />
+                                <p>Cintillo con peluditas orejas de gato. Especiales para disfraces, cosplays, etc.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Colores:</strong>
@@ -316,7 +333,7 @@
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
-                                        $9.990 C/U
+                                        $2.990 C/U
                                     </li>
                                 </ul>
                                 <button class="btn btn-outline-light btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -340,14 +357,18 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Detalles producto -->
-                                <h2 class="text-uppercase">Mini lámpara Pikachu</h2>
-                                <p class="item-intro text-muted">Mini lámpara con diseño Pokemón.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/lamparas/lampara_pikachuladito.JPEG" alt="..." />
-                                <p>Pequeña lamparita con diseño del personaje más reconocido de Pokemón, Pikachu. Con 10cm de largo es capaz de iluminar toda tu habitación con su tenue luz color amarilla. Éste diseño muestra a Pikachu acostado de lado en posición fetal. Usa pilas.</p>
+                                <h2 class="text-uppercase">Pantuflas HelloKitty</h2>
+                                <p class="item-intro text-muted">Zapatillas de levantarse diseño HelloKitty.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/art_varios/pantuflas.png" alt="..." />
+                                <p>Cómodas y hermosas pantuflas peluditas con diseño de la principal personaje de Sanrio, Hello Kitty.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Colores:</strong>
-                                        Amarillo
+                                        Blanco
+                                    </li>
+                                    <li>
+                                        <strong>Tallas:</strong>
+                                        35,36,37,38
                                     </li>
                                     <li>
                                         <strong>PRECIO:</strong>
