--- a/libretas_cuadernos.html
+++ b/libretas_cuadernos.html
@@ -167,7 +167,27 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Libreta gatito</h2>
                                 <p class="item-intro text-muted">Mini libreta diseño gato.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/libretas_cuadernos/libretas_cuadernoss.jpg" alt="..." />
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/libretas_cuadernos/libretas_cuadernoss.jpg" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/libretas_cuadernos/libretas_cuadernoss2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/libretas_cuadernos/libretas_cuadernoss3.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Mini libreta de 10cm con diseño de gatito. Diferentes colores disponibles. Tamaño ideal para bolsos o mochilas pequeñas.</p>
                                 <ul class="list-inline">
                                     <li>
