--- a/nosotros.html
+++ b/nosotros.html
@@ -71,27 +71,27 @@
                             <h4>Marzo-2024</h4>
                             <h4 class="subheading">Oficializamos nuestro negocio</h4>
                         </div>
-                        <div class="timeline-body"><p class="text-muted">Lanzamos nuestros primeros productos</p></div>
+                        <div class="timeline-body"><p class="text-muted">Lanzamos nuestros primeros productos al mercado teniendo un éxito inesperado. Aquí comenzó nuestra expansión.</p></div>
                     </div>
                 </li>
                 <li class="timeline-inverted">
                     <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4>July 2020</h4>
-                            <h4 class="subheading">Phase Two Expansion</h4>
+                            <h4>Abril-2024</h4>
+                            <h4 class="subheading">Expansión y servicios</h4>
                         </div>
-                        <div class="timeline-body"><p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p></div>
+                        <div class="timeline-body"><p class="text-muted">Desde aquí comenzamos nuestro servicio de entrega a la puerta con ventas online y presencial hasta la fecha actual.</p></div>
                     </div>
                 </li>
                 <li class="timeline-inverted">
                     <div class="timeline-image">
                         <h4>
-                            Be Part
+                            ¡Sé parte
                             <br />
-                            Of Our
+                            de nuestra
                             <br />
-                            Story!
+                            historia!
                         </h4>
                     </div>
                 </li>
