--- a/bolsos_mochilas.html
+++ b/bolsos_mochilas.html
@@ -202,7 +202,27 @@
                                 <!-- Detalles producto -->
                                 <h2 class="text-uppercase">Bolso Gatito</h2>
                                 <p class="item-intro text-muted">Mini bolsito diseño gato.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bolsos_mochilas/bolso_gatito1.JPEG" alt="..." />
+                                <div id="carouselExample" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/bolso_gatito1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/bolso_gatito2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/bolso_gatito3.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Mini bolsito de 20cm de diámetro con hermoso diseño de gatito. Apto para artículos pequeños como llaves, makeup y celulares. Distintos colores disponibles.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -237,7 +257,27 @@
                                 <!-- Detalles producto -->
                                 <h2 class="text-uppercase">Estuche Gato Squishy</h2>
                                 <p class="item-intro text-muted">Estuche diseño gato con squishy.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bolsos_mochilas/estuche_gato1.JPEG" alt="..." />
+                                <div id="carouselExample1" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/estuche_gato1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/estuche_gato2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/estuche_gato3.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Precioso estuche de 3 capas con diseño gatito y squishy antiestrés. Espacioso, apto para todo tipo de lápices y accesorios de papelería en general.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -307,7 +347,24 @@
                                 <!-- Detalles producto -->
                                 <h2 class="text-uppercase">Lonchera cute</h2>
                                 <p class="item-intro text-muted">Lonchera térmica diseño cute.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bolsos_mochilas/lonchera1.JPEG" alt="..." />
+                                <div id="carouselExample2" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/lonchera1.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/lonchera2.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Lonchera térmica con hermoso diseño frontal. Mantiene tus alimentos frescos y/o calientes por más tiempo. Dos diseños y colores disponibles.</p>
                                 <ul class="list-inline">
                                     <li>
@@ -342,7 +399,25 @@
                                 <!-- Detalles producto -->
                                 <h2 class="text-uppercase">Mochila Coreana</h2>
                                 <p class="item-intro text-muted">Mini mochila diseño coreno.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bolsos_mochilas/mochila_negra.JPEG" alt="..." />
+                                <div id="carouselExample3" class="carousel slide">
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active">
+                                        <img src="assets/img/portfolio/bolsos_mochilas/mochila_negra.JPEG" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item">
+<!-- Suggested code may be subject to a license. Learn more: ~LicenseLog:928834345. -->
+                                        <img src="assets/img/portfolio/bolsos_mochilas/mochila_rosa.PNG" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample3" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample3" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
                                 <p>Mini mochila con hermoso diseño típico coreano. Apto para artículos pequeños como llaves, makeup y celulares. Dos colores disponibles.</p>
                                 <ul class="list-inline">
                                     <li>
