--- a/contacto.html
+++ b/contacto.html
@@ -6,14 +6,11 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Contacto</title>
-    <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-    <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/stylestwo.css" rel="stylesheet" />
 </head>
@@ -96,10 +93,20 @@
         <br />
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 text-lg-end"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.2920752049267!2d-70.6781852!3d-33.36344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses!2scl!4v1716564543574!5m2!1ses!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <div class="col-lg-6">
+                    <gmp-map
+                        center="-33.36335036624574, -70.67819593336526"
+                        zoom="16"
+                        map-id="DEMO_MAP_ID"
+                        style="height: 200px"
+                    >
+                        <gmp-advanced-marker
+                            position="-33.36335036624574, -70.67819593336526"
+                            title="Duoc UC"
+                        ></gmp-advanced-marker>
+                    </gmp-map>
+                </div>
                 <div class="col-lg-6 text-lg-start">
-                    <!--<a class="link-light text-decoration-none me-3" href="#!">Correo: contacto@nitsuga.com</a>
-                    <a class="link-light text-decoration-none" href="#!">Teléfonos:</a> -->
                     <ul class="list-group-two">
                         <li class="list-group-item text-white">Correo:  <p class="text-lg-start">contacto@nitsuga.com</p></li>
                         <li class="list-group-item text-white">Teléfonos: <p class="text-lg-start">+56 9 6398 1498 <br /> +56 9 5004 2445</p></li>
@@ -127,8 +134,11 @@
             </div>
         </div>
     </footer>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAO_eoUMUeSrEkMwEzMd-zXmfGVWSJPqE&libraries=maps,marker&v=beta"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/maps.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 </body>
 </html>
