--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Servicios</h2>
-                <h3 class="section-subheading text-muted">Conoce cómo trabajamos :)</h3>
+                <h3 class="section-subheading text-muted">Conoce cómo trabajamos :</h3>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
