--- a/lamparas.html
+++ b/lamparas.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Mini Lámparas</h2>
-                <h3 class="subtitle-category section-subheading">Revisa nuestra variedad de pequeñas lamparitas disponibles :)</h3>
+                <h3 class="subtitle-category section-subheading">Revisa nuestra variedad de pequeñas lamparitas disponibles :</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
@@ -85,7 +85,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/lamparas/lampara_squartle.JPEG" alt="..." />
                         </a>
                         <div class="portfolio-caption">
-                            <div class="portfolio-caption-heading">Mini lámpara Squartle</div>
+                            <div class="portfolio-caption-heading">Mini lámpara Squirtle</div>
                             <div class="portfolio-caption-subheading text-muted">$9.990 c/u</div>
                         </div>
                     </div>
