--- a/libretas_cuadernos.html
+++ b/libretas_cuadernos.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Libretas y cuadernos</h2>
-                <h3 class="subtitle-category section-subheading">Revisa nuestra variedad de libretas y cuadernos disponible :)</h3>
+                <h3 class="subtitle-category section-subheading">Revisa nuestra variedad de libretas y cuadernos disponible :</h3>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
